--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@mui/x-data-grid": "^5.17.4",
     "@mui/x-data-grid-generator": "^5.17.4",
     "@mui/x-date-pickers": "^5.0.3",
+    "@react-pdf/renderer": "^3.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.1",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
