--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.10",
     "sweetalert2": "^11.4.34",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
